--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 02.12.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">48 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 02.12.2025 📱</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">48 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>How Your Posture Affects You | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Baking my pizzas with tread Gozney #pizza #gozney #treadgozney#deliciouspizza #pizza 🍕</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -277,7 +277,7 @@
                     <div class="video-info">
                         <h3>Master Cavatelli in Minutes! juliansisofo.com #pasta #freshpasta #food #shorts</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -299,7 +299,7 @@
                     <div class="video-info">
                         <h3>Golf Swing Shoulder Mechanics. Do this if you want real transformation. (Deep Dive)</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -673,7 +673,7 @@
                     <div class="video-info">
                         <h3>Vikkstar, Tobi & WillNE in The WORLD'S FASTEST Car</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1883,7 +1883,7 @@
                     <div class="video-info">
                         <h3>He Solved Racism</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 02.12.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">48 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5754,7 +5754,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 02.12.2025 📱</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">48 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>How Your Posture Affects You | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9395,7 +9395,7 @@
                         <div class="video-info">
                             <h3>Baking my pizzas with tread Gozney #pizza #gozney #treadgozney#deliciouspizza #pizza 🍕</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9417,7 +9417,7 @@
                         <div class="video-info">
                             <h3>Master Cavatelli in Minutes! juliansisofo.com #pasta #freshpasta #food #shorts</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10061,7 +10061,7 @@
                         <div class="video-info">
                             <h3>Golf Swing Shoulder Mechanics. Do this if you want real transformation. (Deep Dive)</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10419,7 +10419,7 @@
                         <div class="video-info">
                             <h3>Vikkstar, Tobi & WillNE in The WORLD'S FASTEST Car</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10881,7 +10881,7 @@
                         <div class="video-info">
                             <h3>He Solved Racism</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
